# vault-signing

./: README.md  pyproject.toml  setup.cfg  setup.py
src/vaultsigning/: __about__.py  key.py
