[metadata]
name = vaultsigning
version = attr: vaultsigning.__about__.__version__
description = Implements stuff
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD or Apache License, Version 2.0
url =
author =
author_email =
project_urls =
    Documentation=
    Source=
    Issues=
    Changelog=
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Security :: Cryptography

[options]
python_requires = >=3.6
include_package_data = True
zip_safe = False
packages = find:
package_dir =
    =src
install_requires =
    cryptography
    oci

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
pep8test =
    black
    flake8
    flake8-import-order
    pep8-naming
